--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tu Aplicación de Nómina</title>
+    <title>Document</title>
     <script src="./main.js" type="module" defer></script>
 </head>
+
 <body>
     <!-- Formulario para ingresar datos -->
     <h2>Ingresar Registro</h2>
@@ -13,11 +15,10 @@
         <label for="nombre">Nombre:</label>
         <input type="text" id="nombre" required>
         <br>
-        <label for="fechaIngreso">Fecha de Ingreso:</label>
-        <input type="date" id="fechaIngreso" required>
-        <br>
-        <label for="fechaEgreso">Fecha de Egreso:</label>
-        <input type="date" id="fechaEgreso">
+        <label for="Ingreso">Ingreso:</label>
+        <input type="radio" name="ingreso_egreso" id="Ingreso" value="Ingreso" required>
+        <label for="Egreso">Egreso:</label>
+        <input type="radio" name="ingreso_egreso" id="Egreso" value="Egreso">
         <br>
         <label for="salario">Salario:</label>
         <input type="number" id="salario" required>
@@ -27,20 +28,21 @@
 
     <!-- Tabla para mostrar los registros -->
     <h2>Registros de Nómina</h2>
-    <table id="nominaTable">
+    <table id="nominaTable" border="solid">
         <thead>
             <tr>
                 <th>ID</th>
                 <th>Nombre</th>
-                <th>Fecha de Ingreso</th>
-                <th>Fecha de Egreso</th>
+                <th>Egreso/Ingreso</th>
                 <th>Salario</th>
                 <th>Acciones</th>
             </tr>
+            
         </thead>
         <tbody>
             <!-- Los registros se llenarán dinámicamente aquí -->
         </tbody>
     </table>
 </body>
+
 </html>
