--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Registro de Nómina</title>
     <script src="./main.js" type="module" defer></script>
 </head>
 
@@ -37,12 +37,10 @@
                 <th>Salario</th>
                 <th>Acciones</th>
             </tr>
-            
         </thead>
         <tbody>
             <!-- Los registros se llenarán dinámicamente aquí -->
         </tbody>
     </table>
 </body>
-
 </html>
