style: :lipstick: crear hoja de estilo
Centrar tabla , h2 y colocar un background en CSS

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <!-- Tabla para mostrar los registros -->
     <h2>Registros de Nómina</h2>
-    <table id="nominaTable" border="solid">
+    <table id="nominaTable" border="solid" align="center">
         <thead>
             <tr>
                 <th>ID</th>
